--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -16,6 +16,7 @@
 // }
 
 {
+  "compileOnSave": false,
   "compilerOptions": {
     "declaration": false,
     "emitDecoratorMetadata": true,
@@ -27,6 +28,10 @@
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es5",
+    "typeRoots": [
+      "../node_modules/core-js"
+    ]
+
   }
 }
 // {
