--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~3.1.0",
     "angular-in-memory-web-api": "^0.1.15",
     "core-js": "^2.4.1",
+    "primeng": "^1.0.0-rc.6",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
