去除本地api功能，通过http请求json数据获得

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -28,8 +28,11 @@
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es5",
+    "types": [
+            "node"
+    ],
     "typeRoots": [
-      "../node_modules/core-js"
+      "../node_modules/@types"
     ]
 
   }
